tidied up a bit

--- a/train.ipynb
+++ b/train.ipynb
@@ -16,9 +16,8 @@
     "from cococaption.pycocotools.coco import COCO\n",
     "from cococaption.pycocoevalcap.eval import COCOEvalCap\n",
     "import torch.backends.cudnn as cudnn\n",
-    "from models import *\n",
+    "from models.captioning_models import *\n",
     "from util import *\n",
-    "from dataset import *\n",
     "\n",
     "from data_utils import get_karpathy_split\n",
     "from data_loader_captions import get_caption_loader\n",
@@ -475,7 +474,7 @@
     "\n",
     "img = transform(image).unsqueeze(0)\n",
     "\n",
-    "enc_image,  global_features = encoder(img)\n",
+    "enc_image, global_features = encoder(img)\n",
     "num_pix = enc_image.shape[1]\n",
     "\n",
     "spatial_image = F.relu(decoder.encoded_to_hidden(enc_image))  # (batch_size,num_pixels,hidden_size)\n",
@@ -510,9 +509,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "spacy",
+   "display_name": "pytorch",
    "language": "python",
-   "name": "spacy"
+   "name": "pytorch"
   },
   "language_info": {
    "codemirror_mode": {
@@ -524,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
